# orderbook

./: .gitignore  README.md
client/: Cargo.toml  build.rs  config.toml  oberon.token  uniffi.toml
client/.cargo/: config.toml
client/src/: OrderbookClient.udl  OrderbookClient.uniffi.rs  lib.rs  orderbook.rs
client/swift/: Info.plist  module.modulemap  package.sh
proto/: orderbook.proto
server/: Cargo.toml  binance.toml  bitstamp.toml  build.rs  config.toml
server/src/: aggregator.rs  api_proof.rs  config.rs  error.rs  grpc.rs  lib.rs  orderbook.rs  platform.rs  source.rs  utils.rs
