[package]
name = "orderbook-client"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
version = "0.1.0"
edition = "2021"
description = "A simple client for talking to an orderbook aggregation service"
license = "APL-2.0"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5.7"
ctrlc = "3.2.5"
hex = { version = "0.4.3", features = ["serde"] }
iso8601-timestamp = "0.2.10"
oberon = { version = "2.0.0", features = ["std"] }
once_cell = "1"
prost = "0.11.6"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3.26"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.7.3"
tonic = "0.8.3"
uniffi = { version = "0.23", default-features = false }
uuid = { version = "1.3", features = ["v4", "serde"] }
vlog = "0.1.4"

[build-dependencies]
anyhow = "1.0"
camino = "1.1"
tonic-build = "0.8"
uniffi = { version = "0.23", default-features = false, features = ["cli"] }
